Microk8s/k8s-configuration/ingress templates/myapp-external-service.yaml
apiVersion: v1 
kind: Service 
metadata:
name: myapp-external-service
spec:
  selector:
    app: myapp
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 35010
