Microk8s/k8s-configuration/ingress templates/myapp-ingress.yaml
apiVersion: networking.k8s.io/vlbetal
kind: Ingress 
metadata:
  name: myapp-ingress
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - backend:
          serviceName: myapp-internal-service
          servicePort: 8080
